可以从相册选择照片上传，但是拍照上传还不行

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- 允许读取手机状态 用于创建BmobInstallation -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- 允许读使用拍照 -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!--加入外部存储设备的权限-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -31,7 +35,7 @@
         <activity android:name=".Login_Page"/>
         <activity android:name=".RegisterPage"/>
         <activity android:name=".Home_Page" />
-        <activity android:name=".Book_Info" />
+        <activity android:name=".Book_detail" />
         <activity android:name=".Menu_page" />
         <activity android:name=".User_Info" />
         <activity android:name=".Advice_Page" />
