--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,8 @@ dependencies {
 
     //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
     compile 'cn.bmob.android:http-legacy:1.0'
+    //添加图片加载工具glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:22.0.0'
     
 }
