--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile 'cn.bmob.android:http-legacy:1.0'
     //添加图片加载工具glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:support-v4:22.0.0'
+    //导入Design Support Library 依赖
+    compile "com.android.support:design:23.1.1"
+
     
 }
