--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <activity android:name=".ui.MyRead" />
         <activity android:name=".ui.MyLike" />
         <activity android:name=".ui.Sharing" />
-        <activity android:name=".ui.EditNickname"></activity>
+        <activity android:name=".ui.EditNickname" />
+        <activity android:name=".ui.HandleBook"></activity>
     </application>
 
 </manifest>
