--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
     //兼容Android6.0系统所需
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "cn.a1949science.www.bookshare"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -24,7 +24,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
 
     //bmob-sdk：Bmob的android sdk包，包含了Bmob的数据存储、文件等服务，以下是最新的bmob-sdk:
     compile 'cn.bmob.android:bmob-sdk:3.5.3'
@@ -43,8 +44,6 @@ dependencies {
     compile 'cn.bmob.android:http-legacy:1.0'
     //添加图片加载工具glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    //导入Design Support Library 依赖
-    compile "com.android.support:design:23.1.1"
 
     
 }
