--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,52 +55,54 @@
         <activity android:name=".ui.Sharing" />
         <activity android:name=".ui.EditNickname" />
         <activity android:name=".ui.HandleBook" />
+
+        <!--注册BmobPush SDK运行所需的推送服务和消息接收器-->
+        <service
+            android:label="PushService"
+            android:name="cn.bmob.push.lib.service.PushService"
+            android:process=":bmobpush"
+            android:exported="true"
+            android:permission="cn.bmob.permission.push">
+            <intent-filter>
+                <action android:name="cn.bmob.push.lib.service.PushService"/>
+            </intent-filter>
+        </service>
+
+        <!-- 用于进程保活
+        <service
+            android:name="cn.bmob.push.lib.service.PushNotifyService"
+            android:process=":bmobpush" >
+        </service>-->
+
+        <receiver android:name="cn.bmob.push.PushReceiver" >
+            <intent-filter>
+                <!-- 系统启动完成后会调用 -->
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <!-- 解锁完成后会调用 -->
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <!-- 监听网络连通性 -->
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+
+        <!-- 第四部中创建的消息接收器，在这里进行注册 -->
+        <receiver android:name="cn.a1949science.www.bookshare.MyPushMessageReceiver">
+            <intent-filter >
+                <action android:name="cn.bmob.push.action.MESSAGE"/>
+            </intent-filter>
+        </receiver>
+
+        <!-- 接收心跳和唤醒的广播，要和PushService运行在同个进程
+        <receiver
+            android:name="cn.bmob.push.PushNotifyReceiver"
+            android:process=":bmobpush" >
+            <intent-filter>
+                &lt;!&ndash; 接收心跳广播的action &ndash;&gt;
+                <action android:name="cn.bmob.push.action.HEARTBEAT" />
+                &lt;!&ndash; 接收唤醒广播的action &ndash;&gt;
+                <action android:name="cn.bmob.push.action.NOTIFY" />
+            </intent-filter>
+        </receiver>-->
     </application>
-
-    <service
-        android:label="PushService"
-        android:name="cn.bmob.push.lib.service.PushService"
-        android:process=":bmobpush"
-        android:exported="true">
-        <intent-filter>
-            <action android:name="cn.bmob.push.lib.service.PushService"/>
-        </intent-filter>
-    </service>
-
-    <!-- 用于进程保活 -->
-    <service
-        android:name="cn.bmob.push.lib.service.PushNotifyService"
-        android:process=":bmobpush" >
-    </service>
-
-    <receiver android:name="cn.bmob.push.PushReceiver" >
-        <intent-filter>
-            <!-- 系统启动完成后会调用 -->
-            <action android:name="android.intent.action.BOOT_COMPLETED" />
-            <!-- 解锁完成后会调用 -->
-            <action android:name="android.intent.action.USER_PRESENT" />
-            <!-- 监听网络连通性 -->
-            <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-        </intent-filter>
-    </receiver>
-
-    <!-- 第四部中创建的消息接收器，在这里进行注册 -->
-    <receiver android:name="your.package.MyPushMessageReceiver">
-        <intent-filter >
-            <action android:name="cn.bmob.push.action.MESSAGE"/>
-        </intent-filter>
-    </receiver>
-
-    <!-- 接收心跳和唤醒的广播，要和PushService运行在同个进程 -->
-    <receiver
-        android:name="cn.bmob.push.PushNotifyReceiver"
-        android:process=":bmobpush" >
-        <intent-filter>
-            <!-- 接收心跳广播的action -->
-            <action android:name="cn.bmob.push.action.HEARTBEAT" />
-            <!-- 接收唤醒广播的action -->
-            <action android:name="cn.bmob.push.action.NOTIFY" />
-        </intent-filter>
-    </receiver>
 
 </manifest>
