--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-    <meta-data android:value="test" android:name="BookShare_CHANNEL"/>
+    <meta-data
+        android:name="BookShare_CHANNEL"
+        android:value="test" />
 
     <application
         android:allowBackup="true"
@@ -55,7 +57,8 @@
         <activity android:name=".activity.Sharing" />
         <activity android:name=".activity.EditNickname" />
         <activity android:name=".activity.MenuActivity" />
-        <activity android:name="cn.bmob.v3.update.UpdateDialogActivity"
+        <activity
+            android:name="cn.bmob.v3.update.UpdateDialogActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <!-- 注册BmobPush SDK运行所需的推送服务和消息接收器 -->
@@ -110,7 +113,8 @@
             </intent-filter>
         </receiver>
         -->
-        <activity android:name=".activity.ImagePicker"></activity>
+        <activity android:name=".activity.ImagePicker" />
+        <activity android:name=".activity.BookDetailCan"></activity>
     </application>
 
 </manifest>
