忘记密码这一个功能已经加上了

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,7 +114,8 @@
         </receiver>
         -->
         <activity android:name=".activity.ImagePicker" />
-        <activity android:name=".activity.BookDetailCan"></activity>
+        <activity android:name=".activity.BookDetailCan" />
+        <activity android:name=".activity.ForgetPassword"></activity>
     </application>
 
 </manifest>
