--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,7 +115,9 @@
         -->
         <activity android:name=".activity.ImagePicker" />
         <activity android:name=".activity.BookDetailCan" />
-        <activity android:name=".activity.ForgetPassword"></activity>
+        <activity android:name=".activity.ForgetPassword" />
+        <activity android:name=".activity.RegisterPage2" />
+        <activity android:name=".activity.Identification"></activity>
     </application>
 
 </manifest>
