--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,9 @@
         <activity android:name=".activity.MyLike" />
         <activity android:name=".activity.Sharing" />
         <activity android:name=".activity.EditNickname" />
-        <activity android:name=".activity.MenuActivity" />
+        <activity
+            android:name=".activity.MenuActivity"
+            android:label="" />
         <activity
             android:name="cn.bmob.v3.update.UpdateDialogActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
@@ -118,7 +120,8 @@
         <activity android:name=".activity.ForgetPassword" />
         <activity android:name=".activity.RegisterPage2" />
         <activity android:name=".activity.Identification" />
-        <activity android:name=".activity.Identification2"></activity>
+        <activity android:name=".activity.Identification2" />
+        <activity android:name=".activity.SearchPage"></activity>
     </application>
 
 </manifest>
