--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.a1949science.www.bookshare">
+    <!--小米更新SDK-->
+    <uses-permission android:name="com.xiaomi.market.sdk.UPDATE" />
 
     <uses-permission android:name="android.permission.GET_TASKS" />
     <permission android:name="cn.a1949science.www.bookshare.permission.MIPUSH_RECEIVE" android:protectionLevel="signature" />
@@ -35,10 +37,6 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
 
-    <meta-data
-        android:name="BookShare_CHANNEL"
-        android:value="test" />
-
     <application
         android:name="cn.a1949science.www.bookshare.MyApplication"
         android:allowBackup="true"
@@ -46,6 +44,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--小米更新-->
+        <provider android:name="android.support.v4.content.FileProvider"
+            android:authorities="cn.a1949science.www.bookshare.selfupdate.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true" >
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+        <!--SDK调用系统下载管理器进行下载，需要注册receiver，在下载完成后进行增量包合成与安装-->
+        <receiver android:name="com.xiaomi.market.sdk.DownloadCompleteReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+            </intent-filter>
+        </receiver>
         <service
             android:enabled="true"
             android:process=":pushservice"
@@ -116,9 +129,6 @@
         <activity
             android:name=".activity.MenuActivity"
             android:label="" />
-        <activity
-            android:name="cn.bmob.v3.update.UpdateDialogActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".activity.ImagePicker" />
         <activity android:name=".activity.BookDetailCan" />
         <activity android:name=".activity.ForgetPassword" />
