--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,14 +10,18 @@ android {
         applicationId "cn.a1949science.www.bookshare"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 7
-        versionName "1.6"
+        versionCode 8
+        versionName "1.7"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions{
+        checkReleaseBuilds false
+        abortOnError false
     }
 }
 
