--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions{
+    lintOptions {
         checkReleaseBuilds false
         abortOnError false
     }
@@ -49,8 +49,8 @@ dependencies {
     compile 'com.lzy.widget:imagepicker:0.5.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'top.zibin:Luban:1.0.9'
-    testCompile 'junit:junit:4.12'
     compile 'cn.yipianfengye.android:zxing-library:2.1'
+    //compile 'mi-appstore:xiaomi-update-sdk:2.6.+'
+    testCompile 'junit:junit:4.12'
     compile files('src/main/libs/MiPush_SDK_Client_3_2_3.jar')
-    compile 'mi-appstore:xiaomi-update-sdk:2.6+'
 }
