--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'top.zibin:Luban:1.0.9'
     compile 'cn.yipianfengye.android:zxing-library:2.1'
-    //compile 'mi-appstore:xiaomi-update-sdk:2.6.+'
     testCompile 'junit:junit:4.12'
     compile files('src/main/libs/MiPush_SDK_Client_3_2_3.jar')
+    compile 'mi-appstore:xiaomi-update-sdk:2.6+'
 }
