--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     //添加图片加载工具glide\picasso
     //选择图片
     //图片压缩工具
+    compile files('src/main/libs/MiPush_SDK_Client_3_2_3.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -51,6 +52,5 @@ dependencies {
     compile 'top.zibin:Luban:1.0.9'
     compile 'cn.yipianfengye.android:zxing-library:2.1'
     testCompile 'junit:junit:4.12'
-    compile files('src/main/libs/MiPush_SDK_Client_3_2_3.jar')
-    compile 'mi-appstore:xiaomi-update-sdk:2.6+'
+    //compile 'mi-appstore:xiaomi-update-sdk:2.6.+'
 }
