--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "cn.a1949science.www.bookshare"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 7
-        versionName "1.1.6"
+        versionCode 8
+        versionName "1.2.1"
     }
     buildTypes {
         release {
@@ -52,5 +52,5 @@ dependencies {
     compile 'top.zibin:Luban:1.0.9'
     compile 'cn.yipianfengye.android:zxing-library:2.1'
     testCompile 'junit:junit:4.12'
-    //compile 'mi-appstore:xiaomi-update-sdk:2.6.+'
+    compile 'mi-appstore:xiaomi-update-sdk:2.6+'
 }
