--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -151,6 +151,8 @@
         </activity>
         <activity android:name=".activity.WriterInfoPage" />
         <activity android:name=".activity.ScanISBN"/>
+        <activity
+            android:name=".activity.PermissionsActivity"/>
     </application>
 
 </manifest>
