--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.a1949science.www.bookshare">
+    <!--Bmob更新-->
 
     <!-- 小米更新SDK -->
     <uses-permission android:name="com.xiaomi.market.sdk.UPDATE" />
@@ -46,6 +47,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data android:value="test" android:name="BMOB_CHANNEL"/>
 
         <!-- 小米更新 -->
         <provider
@@ -151,8 +154,11 @@
         </activity>
         <activity android:name=".activity.WriterInfoPage" />
         <activity android:name=".activity.ScanISBN"/>
+        <activity android:name=".activity.PermissionsActivity"/>
         <activity
-            android:name=".activity.PermissionsActivity"/>
+            android:name="cn.bmob.v3.update.UpdateDialogActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
