--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,11 +61,11 @@
                 android:resource="@xml/file_paths" />
         </provider>
         <!-- SDK调用系统下载管理器进行下载，需要注册receiver，在下载完成后进行增量包合成与安装 -->
-        <receiver android:name="com.xiaomi.market.sdk.DownloadCompleteReceiver">
+        <!--<receiver android:name="com.xiaomi.market.sdk.DownloadCompleteReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
             </intent-filter>
-        </receiver>
+        </receiver>-->
 
         <service
             android:name="com.xiaomi.push.service.XMPushService"
