--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "cn.a1949science.www.bookshare"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 14
-        versionName "1.2.7"
+        versionCode 15
+        versionName "1.2.8"
     }
     buildTypes {
         release {
@@ -53,4 +53,5 @@ dependencies {
     compile 'cn.yipianfengye.android:zxing-library:2.1'
     testCompile 'junit:junit:4.12'
     compile 'mi-appstore:xiaomi-update-sdk:2.6+'
+    //PhotoView
 }
