--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     //选择图片
     //图片压缩工具
     compile files('src/main/libs/MiPush_SDK_Client_3_2_3.jar')
+    //PhotoView
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -52,6 +53,5 @@ dependencies {
     compile 'top.zibin:Luban:1.0.9'
     compile 'cn.yipianfengye.android:zxing-library:2.1'
     testCompile 'junit:junit:4.12'
-    compile 'mi-appstore:xiaomi-update-sdk:2.6+'
-    //PhotoView
+    //compile 'mi-appstore:xiaomi-update-sdk:2.6.+'
 }
